# nyx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build-signed.sh  notarize-poll.sh  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: release.yml
signing/: CertificateSigningRequest.certSigningRequest
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: docker-compose.yml  squid.conf  start-nyx.sh
src-tauri/resources/cron/: jobs.json
src-tauri/resources/local-skills/clawdtalk/: skill-config.json.sample
src-tauri/resources/local-skills/gog/: SKILL.md
src-tauri/resources/local-skills/near-intents/: SKILL.md
src-tauri/resources/local-skills/travel/: SKILL.md
src-tauri/resources/near-intents-helper/: access_keys.py  burrow.py  generate_wallet.py  guardrails.py  leak_detector.py  near_intents.py  near_rpc.py  nearai_auth.py  oracle.py  portfolio.py  requirements.txt  run_near_intents.sh  staking.py  strategy.py  transfers.py  tx_builder.py  yield_engine.py
src-tauri/resources/templates/: docker.env.tmpl  guardrails.env.tmpl  openclaw.json.tmpl
src-tauri/resources/workspace/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  USER.md
src-tauri/src/: browser.rs  claudecode.rs  clawdtalk.rs  config.rs  docker.rs  gateway.rs  google.rs  intelligence.rs  lib.rs  main.rs  mcp.rs  ollama.rs  oneclick.rs  portfolio.rs  portfolio_data.rs  pty.rs  setup.rs  wallet.rs
src/routes/: +layout.svelte  +page.svelte
static/: robots.txt
(+22 files in other folders)
