[package]
name = "nyx"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"
sha2 = "0.10"
hex = "0.4"
notify = "7"
reqwest = { version = "0.12", features = ["json"] }
dirs-next = "2"
uuid = { version = "1", features = ["v4"] }
